Add MongoDB connection, product model, and API route for product creation; update dependencies

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^8.18.1",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
